# crm-nh-grid

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: test.py
src/crm_nh_grid/: __init__.py  core.py  crm.py  icrm.py
src/crm_nh_grid/interface/: icrm.py
tests/: test_core.py
