[project]
name = "crm-nh-grid"
version = "0.1.0"
description = "The Core of Resource Model (CRM) of NH-Grid, implemented by python."
authors = [
    {name = "YcSoku",email = "dsssyc02@gmail.com"}
]
license = {text = "BSD-2-Clause license"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow (>=19.0.1,<20.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-benchmark = "^5.1.0"
